created domain project and moved entities over

--- a/TNWalks.Test/TNWalks.Test.csproj
+++ b/TNWalks.Test/TNWalks.Test.csproj
@@ -24,6 +24,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\TNWalks.API\TNWalks.API.csproj" />
+      <ProjectReference Include="..\TNWalks.Domain\TNWalks.Domain.csproj" />
     </ItemGroup>
 
 </Project>
