because it was time to commit, naive implementation of PagedList.cs

--- a/TNWalks.API/appsettings.json
+++ b/TNWalks.API/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TNWalksConnectionString": "Server=localhost;Database=TNWalksDB;User Id=SA;Password=A&VeryComplex123Password;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "TNWalksConnectionString": "Server=localhost;Database=TNWalksDB;User Id=SA;Password=A&VeryComplex123Password;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "TNWalksAuthConnectionString": "Server=localhost;Database=TNWalksAuthDB;User Id=SA;Password=A&VeryComplex123Password;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "3qw693nvfsJr0JyOZ1llf9ULIs8YProD",
+    "Issuer": "https://localhost:7106",
+    "Audience": "https://localhost:7106"
   }
 }
